[gd_scene load_steps=8 format=1]

[ext_resource path="res://ui/scene.gd" type="Script" id=1]
[ext_resource path="res://font/gamefont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://imgs/start.png" type="Texture" id=3]
[ext_resource path="res://imgs/ring.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 0.588235 )
light_color = Color( 0, 0, 0, 0.588235 )
dark_color = Color( 0, 0, 0, 0.588235 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Theme" id=2]

Panel/styles/panel = SubResource( 1 )
Panel/styles/panelf = null
Panel/styles/panelnc = null

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0390625, 0.0390625, 0.0390625, 0.588235 )
light_color = Color( 0, 0, 0, 0.588235 )
dark_color = Color( 0, 0, 0, 0.588235 )
border_size = 0
border_blend = true
draw_bg = true

[node name="CanvasLayer" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 3 )

[node name="GameOver" type="Node2D" parent="Panel"]

editor/display_folded = true
visibility/visible = false

[node name="Sprite" type="Sprite" parent="Panel/GameOver"]

[node name="Label1" type="Label" parent="Panel/GameOver"]

anchor/left = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -28.0
margin/top = 275.0
margin/right = 1104.0
margin/bottom = 441.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="Panel/GameOver"]

anchor/left = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 228.0
margin/top = 570.0
margin/right = 848.0
margin/bottom = 736.0
custom_fonts/font = ExtResource( 2 )
text = "100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score1" type="Label" parent="Panel/GameOver"]

anchor/left = 3
rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -158.0
margin/top = 710.0
margin/right = 1234.0
margin/bottom = 876.0
custom_fonts/font = ExtResource( 2 )
text = "score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton1" type="TextureButton" parent="Panel/GameOver"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 461.0
margin/top = 823.0
margin/right = 717.0
margin/bottom = 1079.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[node name="MainMenu" type="Node2D" parent="Panel"]

editor/display_folded = true

[node name="Label" type="Label" parent="Panel/MainMenu"]

anchor/left = 3
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -33.0
margin/top = 273.0
margin/right = 1109.0
margin/bottom = 439.0
custom_fonts/font = ExtResource( 2 )
text = "Digi Circle"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Panel/MainMenu"]

transform/pos = Vector2( 320, 650 )
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="Panel/MainMenu/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -89.0
margin/top = -67.0
margin/right = 167.0
margin/bottom = 189.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )

[connection signal="pressed" from="Panel/GameOver/TextureButton1" to="." method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="Panel/MainMenu/Sprite/TextureButton" to="." method="_on_TextureButton_pressed"]


